# bevy-ds

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  build.rs  flake.nix
.claude/skills/asset-audit/: SKILL.md
.claude/skills/design-guard/: SKILL.md
.claude/skills/design-sync/: SKILL.md
.claude/skills/preview-rom/: SKILL.md
.github/: copilot-instructions.md
crates/bevy_nds/: Cargo.toml
crates/bevy_nds/src/: diagnostics.rs  ffi.rs  gesture.rs  input.rs  lib.rs  render.rs  runner.rs  runtime.rs  screen.rs  time.rs
crates/bevy_nds_3d/: Cargo.toml
crates/bevy_nds_3d/src/: ffi.rs  lib.rs
crates/bevy_nds_3d_cull/: Cargo.toml
crates/bevy_nds_3d_cull/src/: lib.rs
crates/bevy_nds_3d_macros/src/: lib.rs
crates/bevy_nds_3d_obj/src/: lib.rs
crates/bevy_nds_audio/: Cargo.toml
crates/bevy_nds_audio/src/: ffi.rs  lib.rs
crates/bevy_nds_cothread/: Cargo.toml
crates/bevy_nds_cothread/src/: lib.rs  task.rs
crates/bevy_nds_diagnostics/: Cargo.toml
crates/bevy_nds_diagnostics/src/: lib.rs
crates/bevy_nds_gesture/: Cargo.toml
crates/bevy_nds_gesture/src/: lib.rs
crates/bevy_nds_input/: Cargo.toml
crates/bevy_nds_input/src/: lib.rs
crates/bevy_nds_nitrofs/: Cargo.toml
crates/bevy_nds_nitrofs/src/: lib.rs
crates/bevy_nds_rtc/: Cargo.toml
crates/bevy_nds_rtc/src/: lib.rs
crates/bevy_nds_runtime/: Cargo.toml
crates/bevy_nds_runtime/src/: lib.rs
crates/bevy_nds_save/src/: lib.rs
crates/bevy_nds_sprite/: Cargo.toml
crates/bevy_nds_sprite/src/: asset.rs  lib.rs
crates/bevy_nds_text/: Cargo.toml
crates/bevy_nds_text/src/: lib.rs
crates/bevy_nds_time/: Cargo.toml
crates/bevy_nds_time/src/: lib.rs
crates/bevy_nds_video/: Cargo.toml
crates/bevy_nds_video/src/: lib.rs
crates/obj2dl/src/: main.rs
crates/png2sprite/: Cargo.toml
crates/png2sprite/src/: lib.rs  main.rs
crates/wav2bank/: Cargo.toml
crates/wav2bank/src/: ids.rs  lib.rs  main.rs  wav.rs
docs/design/: PILLARS.md
src/: main.rs
